--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.3.12",
     "@storybook/testing-react": "^0.0.22",
+    "chromatic": "^6.0.5",
     "react-test-renderer": "^17.0.2"
   }
 }
